--- a/package.json
+++ b/package.json
@@ -11,11 +11,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ajax": "^0.0.4",
     "axios": "^0.21.1",
     "chai": "^4.3.4",
     "chromedriver": "^92.0.2",
+    "jQuery": "^1.7.4",
+    "jsdom": "^17.0.0",
     "mocha": "^9.1.1",
     "mochawesome": "^6.2.2",
-    "selenium-webdriver": "^4.0.0-rc-1"
+    "request": "^2.88.2",
+    "selenium-webdriver": "^4.0.0-rc-1",
+    "xmlhttprequest": "^1.8.0"
   }
 }
